New template for site

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 .left {
   float: left;
   width: 50%;
@@ -6,13 +7,13 @@
 .right {
   float: right;
   width: 48%;
-  margin-left: 20px;
+  margin-right: 4px;
 }
 
 .booking {
   float: right;
   width: 48%;
-  margin-left: 4px;
+  margin-right: 4px;
 }
 
 .spacing {
@@ -31,9 +32,8 @@
   text-align: left;
 } */
 
-
 input[type=text], input[type=date], select, textarea {
-    width: 75%;
+    width: 50%;
     padding: 6px;
     border: 1px solid #ccc;
     border-radius: 1px;
