--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -15,9 +15,10 @@ header {
 }
 
 section {
-  padding: 150px 0;
+  padding-top: 75px;
+  padding-bottom: 75px;
 }
 
-#bookings {
-  padding: 10px;
+#bookings, #contact {
+  padding: 20px;
 }
