--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,19 @@
   margin-left: 20px;
 }
 
+.aboutRight {
+  float: right;
+  width: 48%;
+  margin-left: 20px;
+  background: #00FF00;
+}
+
+.aboutLeft {
+  float: left;
+  width: 50%;
+  background: #00FFFF;
+}
+
 .booking {
   float: right;
   width: 48%;
@@ -16,21 +29,30 @@
 }
 
 .spacing {
-  line-height: 1.8;
-  font-size: 16px;
+  line-height: 2;
+  font-size: 20px;
 }
 
 .bold {
   font-weight: bold;
 }
 
-/* .heading {
+.heading {
   font-family: 'Helvetica', 'Arial', sans-serif;
   font-size: 26px;
   font-weight: bold;
   text-align: left;
-} */
+  text-decoration: underline;
+}
 
+.headingLight {
+  font-family: 'Helvetica', 'Arial', sans-serif;
+  font-size: 26px;
+  font-weight: bold;
+  text-align: left;
+  text-decoration: underline;
+  color: #FFFFFF;
+}
 
 input[type=text], input[type=date], select, textarea {
     width: 75%;
@@ -61,11 +83,33 @@ input[type=submit]:hover {
     background-color: #45a049;
 }
 
+input#contact[type=text], textarea#contact {
+    width: 75%;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 1px;
+    margin-top: 6px;
+    margin-bottom: 10px;
+    display: inline-block;
+}
+
 #map {
   height: 500px;
   width: 50%;
 }
 
-.w-100 {
-  height: 500px;
+.bg-primary {
+  background: #00a8f3 !important;
+}
+
+.logo {
+  width: 8%;
+}
+
+.card-title {
+  text-decoration: underline;
+}
+
+.lead {
+  color: #000000;
 }
